<resources>
    <string name="app_name">记账app</string>
    <string name="code">记一笔..</string>
    <string name="month_out">本月支出</string>
    <string name="month_int">本月收入</string>
    <string name="out">支出</string>
    <string name="in">收入</string>
    <string name="money">预算剩余</string>
    <string name="see">查看图表分析</string>
    <string name="other">其他</string>
    <string name="time">2022/6/21 21:00</string>
    <string name="write">添加备注</string>
    <string name="record">备注</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="setting">设置</string>
    <string name="history_record">账单记录</string>
    <string name="input_time">请输入时间（24小时制）</string>
    <string name="set_budget">设置预算</string>
    <string name="please_search_info">请输入搜索内容</string>
    <string name="date_empty">搜索内容为空</string>
    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清空所有记录</string>
    <string name="chart_info">账单详情</string>


</resources>