<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white">

   <TextView
       android:id="@+id/dialog_record_tv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/write"
       android:textStyle="bold"
       android:textSize="15sp"
       android:textColor="@color/black"/>

    <EditText
        android:id="@+id/dialog_record_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_record_tv"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:hint="@string/record"
        android:textSize="15sp">

        <requestFocus />
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/dialog_record_ed"
        android:padding="10dp">
        <Button
            android:id="@+id/dialog_record_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@drawable/dialog_record_bg"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/dialog_record_ensure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ensure"
            android:background="@drawable/shape_control"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"/>

    </LinearLayout>

</RelativeLayout>



