<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <DatePicker
        android:id="@+id/dialog_time_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_time_tv1"
        android:text="@string/input_time"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <EditText
            android:id="@+id/dialog_time_et1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/dialog_time_et2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:inputType="number"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_time_bu1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="@string/cancel"
            />

        <Button
            android:id="@+id/dialog_time_bu2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="@string/ensure"
            />

    </LinearLayout>
</LinearLayout>