<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/item_main_top_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_out"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/item_main_top_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_main_top_tv1"
            android:text="￥ 0"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/item_main_top_src"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@id/item_main_top_tv2"
            android:layout_alignParentRight="true"
            android:src="@mipmap/image55" />

        <TextView
            android:id="@+id/item_main_top_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_main_top_tv2"
            android:text="@string/month_int"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/item_main_top_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/item_main_top_tv3"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/item_main_top_tv3"
            android:text="￥ 500"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/item_main_top_tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/item_main_top_tv3"
            android:layout_alignParentRight="true"
            android:text="￥ 500"
            android:textColor="@color/black"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/item_main_top_tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_main_top_tv2"
            android:text="@string/money"
            android:textSize="15dp"
            android:layout_toLeftOf="@id/item_main_top_tv5"
            android:layout_marginRight="10dp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/item_main_top_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="今日收入 ￥0 今日支出 ￥0"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>