<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <RelativeLayout
        android:id="@+id/frag_record_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <ImageView
            android:id="@+id/frag_record_top_src"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/image5" />

        <TextView
            android:id="@+id/frag_record_top_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/frag_record_top_src"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/frag_record_top_src"
            android:text="@string/other"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/frag_record_top_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:inputType="number" />

    </RelativeLayout>

    <View
        android:id="@+id/frag_record_top_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/frag_record_top"
        android:background="@color/gray" />

    <GridView
        android:id="@+id/frag_record_top_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/frag_record_top_view"
        android:background="@color/white"
        android:numColumns="5"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <!--软键盘-->
    <android.inputmethodservice.KeyboardView
        android:id="@+id/frag_record_top_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        android:keyTextColor="@color/black"
        android:focusable="true"
        android:keyBackground="@color/gray"
        android:focusableInTouchMode="true"
        android:paddingTop="1dp"
        android:layout_alignParentBottom="true"
        android:shadowColor="@color/white"
        android:shadowRadius="0.0"/>

    <RelativeLayout
        android:id="@+id/frag_record_top2"
        android:layout_above="@id/frag_record_top_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/frag_record_top_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/frag_record_top_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/frag_record_top_time"
            android:text="@string/write"
            android:textSize="20sp" />

    </RelativeLayout>
</RelativeLayout>